# ls-android-deps

./: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
SDL2/: CMakeLists.txt  cmake_install.cmake
SDL2/src/video/: SDL_egl.c
SDL2_gfx/: cmake_install.cmake
SDL2_image/: cmake_install.cmake
SDL2_jpeg/: cmake_install.cmake
SDL2_jpeg/src/: jmem-android.c
SDL2_mixer/: cmake_install.cmake
SDL2_png/: cmake_install.cmake
SDL2_ttf/: cmake_install.cmake
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/rocks/georgik/sdlapp/: MainActivity.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/drawable-anydpi-v26/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml
arm64-v8a/pixman/: pixman-version.h
arm64-v8a/tinyxml2/: DartConfiguration.tcl  tinyxml2.pc
freetype/: cmake_install.cmake
giflib/: CMakeLists.txt  cmake_install.cmake
main/: CMakeLists.txt  SDL_android_main.c  build.gradle  extractAssets.cpp
main/src/: SDL_android_main.c  extractAssets.cpp
main/src/main/: SDL_android_main.c
pixman/: CMakeLists.txt  cmake_install.cmake
tinyxml2/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
x86/tinyxml2/: DartConfiguration.tcl  tinyxml2.pc.gen
